--- a/HalalGuide/Base.lproj/Localizable.strings
+++ b/HalalGuide/Base.lproj/Localizable.strings
@@ -80,8 +80,12 @@ Copyright (c) 2014 Eazy It. All rights reserved.
 "regret" = "Fortryd";
 "no" = "Nej";
 "yes" = "Ja";
+"action"= "Handling";
 "directions" = "Find vej";
-"directionsText" = "Vil du åbne Kort og få vist vejen til"
+"call" = "Ring til restaurant";
+"warning" = "Advarsel";
+"directionsText" = "Vil du åbne Kort og få vist vejen til";
+"callNotAvaileble"= "Enheden understøtter ikke opringning";
 
 "couldnotcreateindb" = "Kunne ikke kontakte databasen, prøv igen?";
 "couldnotuploadfile" = "Kunne ikke uploade billede, prøv igen?";
@@ -110,9 +114,20 @@ Copyright (c) 2014 Eazy It. All rights reserved.
 "estimatingAddress" = "Gætter din adresse";
 "invalidAddress" = "Ikke en gyldig adresse";
 "GPSNotPreciseEnough" = "GPS punkt for adressen er upræcist, vil du selv vælge den på kortet?";
+"authenticate" = "Autentifikation";
+"authenticateText" = "For at kunne indsende forslag til HalalGuide, så skal du bekræfte din identitet via facebook";
 
 "addPicture" = "Tilføj billede";
 "newPicture" = "Tag nyt billede";
 "choosePicture" = "Vælg billede";
 
-"errorMailText" = "Der er følgende forkerte oplysninger: \nUDDYB HER!"
+"errorMailText" = "Der er følgende forkerte oplysninger: \nUDDYB HER!";
+
+"addNewDiningOnBoardingButton" = "Tryk her for at indsende et forslag";
+"filterDiningOnBoardingButton" = "Tryk her for filtrere de viste spisesteder";
+
+"diningCellPorkOnBoarding" = "Viser om der også serveres gris";
+"diningCellAlcoholOnBoarding" = "Viser om der også serveres alkohol";
+"diningCellHalalOnBoarding" =  "Viser om der udelukkende serveres halal kød";
+
+"diningDetailAddressTelephoneOptionsOnBoarding" = "Tryk her for at her få rutevejledning eller ringe til restauranten";
