In App purchase for supporting HalalGuide #10

--- a/HalalGuide/Base.lproj/Localizable.strings
+++ b/HalalGuide/Base.lproj/Localizable.strings
@@ -139,3 +139,8 @@ Copyright (c) 2014 Eazy It. All rights reserved.
 "diningDetailAddressTelephoneOptionsOnBoarding" = "Tryk her for at her få rutevejledning eller ringe til stedet";
 
 "createLocationPickImageOnBoarding" = "Tryk her for at tilføje et billede";
+
+"supportOnBoarding" = "Støt den gratis app med et lille beløb";
+
+"thank" = "Tak";
+"thankText" = "Tak for dit bidrag";
