--- a/HalalGuide/en.lproj/Localizable.strings
+++ b/HalalGuide/en.lproj/Localizable.strings
@@ -113,6 +113,7 @@
 "mosque" = "Mosque";
 "shop" = "Shop";
 
+
 "loggingIn" = "Logging in";
 "fetching"  = "Fecthing";
 "unlimited" = "Unlimited";
@@ -140,4 +141,9 @@
 "diningDetailAddressTelephoneOptionsOnBoarding" = "Press here to get directions or call the place";
 
 "createLocationPickImageOnBoarding" = "Press here to add a picture";
+
+"supportOnBoarding" = "Support the free app with a small amount";
+
+"thank" = "Thanks";
+"thankText" = "Thank you for your contribution";
 
