DiningDetailImage full screen image slideshow #13 Tapping images should make them full screen with glossy background #2

--- a/HalalGuide/Base.lproj/Localizable.strings
+++ b/HalalGuide/Base.lproj/Localizable.strings
@@ -140,6 +140,8 @@ Copyright (c) 2014 Eazy It. All rights reserved.
 
 "createLocationPickImageOnBoarding" = "Tryk her for at tilføje et billede";
 
+"slideShowViewSwipeToViewMore" = "Swipe for at se flere billeder";
+
 "supportOnBoarding" = "Støt den gratis app med et lille beløb";
 
 "thank" = "Tak";
