Add e-number support #7

--- a/HalalGuide/en.lproj/MainStoryboard.strings
+++ b/HalalGuide/en.lproj/MainStoryboard.strings
@@ -200,7 +200,7 @@ City";
 "anh-JJ-nLG.text" = "Address";
 
 /* Class = "IBUILabel"; text = "Enummer"; ObjectID = "bTb-qg-eLp"; */
-"bTb-qg-eLp.text" = "Enummer";
+"bTb-qg-eLp.text" = "Enumber";
 
 /* Class = "IBUINavigationItem"; title = "HalalGuide"; ObjectID = "bUD-Kh-hMd"; */
 "bUD-Kh-hMd.title" = "HalalGuide";
