Add label if no results found #14

--- a/HalalGuide/en.lproj/MainStoryboard.strings
+++ b/HalalGuide/en.lproj/MainStoryboard.strings
@@ -1,3 +1,5 @@
+/* Class = "IBUILabel"; text = "Ingen resultater fundet, prøv at skifte filter"; ObjectID = "OZy-6d-NYg"; */
+"OZy-6d-NYg.text" = "No results found, try changing filters";
 
 /* Class = "IBUIBarButtonItem"; title = "Fortryd"; ObjectID = "0Ej-4a-HKE"; */
 "0Ej-4a-HKE.title" = "Regret";
