--- a/HalalGuide/da-DK.lproj/Localizable.strings
+++ b/HalalGuide/da-DK.lproj/Localizable.strings
@@ -123,6 +123,7 @@ Copyright (c) 2014 Eazy It. All rights reserved.
 "estimatingAddress" = "Gætter din adresse";
 "invalidAddress" = "Ikke en gyldig adresse";
 "GPSNotPreciseEnough" = "GPS punkt for adressen er upræcist, vil du selv vælge den på kortet?";
+"manuelGPSPosition" = "Træk og slip for at vælge ny position";
 "authenticate" = "Autentifikation";
 "authenticateText" = "For at kunne indsende forslag til HalalGuide, så skal du bekræfte din identitet via facebook";
 
