--- a/HalalGuide/da-DK.lproj/Localizable.strings
+++ b/HalalGuide/da-DK.lproj/Localizable.strings
@@ -92,6 +92,7 @@ Copyright (c) 2014 Eazy It. All rights reserved.
 "couldnotuploadfile" = "Kunne ikke uploade billede, prøv igen?";
 "addressdoesnotexists" = "Adressen findes ikke ";
 "error" = "Ukendt fejl";
+"errorText" = "Der skete en ukendt fejl, prøv igen senere.";
 
 "awaiting" = "Venter godkendelse";
 "approved" = "Godkendt";
@@ -115,6 +116,7 @@ Copyright (c) 2014 Eazy It. All rights reserved.
 "shop" = "Handle";
 
 "loggingIn" = "Logger ind";
+"login" = "Log ind";
 "fetching"  = "Henter";
 "unlimited" = "Ubegrænset";
 "savingToTheCloud" = "Gemmer i skyen";
@@ -127,6 +129,7 @@ Copyright (c) 2014 Eazy It. All rights reserved.
 "manuelGPSPosition" = "Træk og slip for at vælge ny position";
 "authenticate" = "Autentifikation";
 "authenticateText" = "For at kunne indsende forslag til HalalGuide, så skal du bekræfte din identitet via facebook";
+"authenticateSuccessfull" = "Du er nu logget ind, prøv din handling igen";
 
 "addPicture" = "Tilføj billede";
 "newPicture" = "Tag nyt billede";
