--- a/HalalGuide/da-DK.lproj/Localizable.strings
+++ b/HalalGuide/da-DK.lproj/Localizable.strings
@@ -231,3 +231,9 @@ Copyright (c) 2014 Eazy It. All rights reserved.
 "uploading" = "Sender...";
 "downloading" = "Henter...";
 "percentageComplete"= "færdig";
+
+"ZLPromptUserReview.title"="Anmeld";
+"ZLPromptUserReview.message"="Vi håber du nyder HalalGuide, måske kunne du tænke dig at give os en anmeldelse?";
+"ZLPromptUserReview.confirm"="Ja";
+"ZLPromptUserReview.cancel"="Nej tak";
+"ZLPromptUserReview.remind"="Påmind mig senere";
