Move away from storyboard #89 Use autolayot with Masonry #66

--- a/HalalGuide/da-DK.lproj/Localizable.strings
+++ b/HalalGuide/da-DK.lproj/Localizable.strings
@@ -237,3 +237,11 @@ Copyright (c) 2014 Eazy It. All rights reserved.
 "ZLPromptUserReview.confirm"="Ja";
 "ZLPromptUserReview.cancel"="Nej tak";
 "ZLPromptUserReview.remind"="Påmind mig senere";
+
+"FrontPageViewController.title"  = "HalalGuide";
+"FrontPageViewController.button.shop"= "Handle";
+"FrontPageViewController.button.enumber"= "Enummer";
+"FrontPageViewController.button.eat"= "Spise";
+"FrontPageViewController.button.mosque"= "Moske";
+"FrontPageViewController.button.settings"= "Indstillinger";
+"FrontPageViewController.label.latest.updates" = "Seneste opdateringer";
