Implement image picker like sms attacher #91

--- a/HalalGuide/da-DK.lproj/Localizable.strings
+++ b/HalalGuide/da-DK.lproj/Localizable.strings
@@ -264,3 +264,17 @@ Copyright (c) 2014 Eazy It. All rights reserved.
 "LocationViewController.button.map" = "Map";
 "LocationViewController.button.list" = "List";
 "LocationViewController.searchbar.placeholder" = "Søgetekst";
+
+"LocationDetailViewController.label.km" = "km";
+"LocationDetailViewController.label.submitterHeadLine" = "Indsendt af:";
+"LocationDetailViewController.button.report" = "Rapporter fejl";
+"LocationDetailViewController.button.add.review" = "Tilføj anmeldelse";
+"LocationDetailViewController.button.add.picture" = "Tilføj billede";
+"LocationDetailViewController.label.no.reviews" = "Der findes ingen anmeldelser for dette sted endnu. Skal du være den første?";
+"LocationDetailViewController.label.no.pictures" = "Der findes ingen billeder for dette sted endnu. Skal du være den første?";
+
+"HGImagePickerView.button.approve" = "Tilføj 1 billed";
+"HGImagePickerView.button.approve.multiple" = "Tilføj %lu billeder";
+"HGImagePickerView.button.photoLibrary" = "Fotobibliotek";
+"HGImagePickerView.button.takePicture" = "Tag billede";
+"HGImagePickerView.button.cancel" = "Fortryd";
